fixed underline overflowing

--- a/src/sass/app_2/header.scss
+++ b/src/sass/app_2/header.scss
@@ -54,10 +54,10 @@ header {
                             display: block;
                             content: '';
                             height: 3px;
-                            width: 26vh;
+                            width: 6rem;
                             background-color: $primaryBrandColor;
                             right: 0;
-                            left: 34vh;
+                            left: 7.5rem;
                             position: absolute;
                             margin-top: 10px;
                             transition: 0.4s ease-in-out;
@@ -68,13 +68,13 @@ header {
                             margin-left: 0;
                         }
                         &:nth-child(2) ~ a:last-child:after {
-                            margin-left: 31vh;
+                            margin-left: 6.5rem;
                         }
                         &:nth-child(3) ~ a:last-child:after {
-                            margin-left: 66vh;
+                            margin-left: 14rem;
                         }
                         &:last-child:after {
-                            margin-left: 100vh;
+                            margin-left: 21rem;
                         }
                     }
                 }
